Preliminary (rough) revisions of proof theory chapter

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
 \newcommand\naturals{\ensuremath{\mathbb{N}}}
 \newcommand\suc[1]{\ensuremath{\mathsf{S}(#1)}}
 \newcommand\natrec[3]{\ensuremath{\mathsf{rec}_\naturals(#1;#2;#3)}}
-\newcommand\lfhyp[2]{\ensuremath{#1\ [#2]}}
+\newcommand\lfsequent[2]{\ensuremath{#1\vdash#2}}
 \newcommand\prf[1]{\ensuremath{\mathsf{Prf}(#1)}}
 \newcommand\MLLF{\textbf{MLLF}}
 \newcommand\infers[2]{\ensuremath{#1\uparrow{\color{Gray}{#2}}}}
