Fix typo noticed by Carlo

--- a/ctt.tex
+++ b/ctt.tex
@@ -161,7 +161,7 @@ $\sequent{\Gamma}{\mathcal{J}}$, starting with typehood with respect to a contex
   To know $\sequent{\Gamma}{\isset{A}}$ is to know, if
 $\reduce{\Gamma}{\cdot}$, then $\isset{A}$; otherwise, if
 $\reduce{\Gamma}{\Delta,\ver{x}{B}}$, that
-$\genj{M}{\hyp{\sequent{\Delta}{[M/x]\isset{B}}}{\sequent{\Delta}{\ver{M}{B}}}}$
+$\genj{M}{\hyp{\sequent{\Delta}{[M/x]\isset{A}}}{\sequent{\Delta}{\ver{M}{B}}}}$
 and moreover
 $\genj{M,N}{\hyp{\sequent{\Delta}{\isset{[M/x]A=[N/x]A}}}{\sequent{\Delta}{\ver{M=N}{B}}}}$.
 
