--- a/main.tex
+++ b/main.tex
@@ -64,9 +64,9 @@
 \title{Type theory and its meaning explanations}
 \author{Jonathan Sterling}
 
-\thanks{Thanks to Bob Harper, Peter Dybjer, Bengt Norstr\"om and Darin Morrison
-for invaluable conversations which helped sharpen my view of the meaning
-explanations for computational and intensional type theories.}
+\thanks{Thanks to Bob Harper, Peter Dybjer, Bengt Norstr\"om, Carlo Angiuli and
+Darin Morrison for invaluable conversations which helped sharpen my view of the
+meaning explanations for computational and intensional type theories.}
 
 % \address{AlephCloud Systems}
 % \email{jon@jonmsterling.com}
